--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,14 +89,10 @@ p {
     background-position: center;
 }
 
-.float-left {
+.float-left,
+.float-right {
     float: left;
     margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
 }
 
 .content {
