--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ a {
 
 /* 
 Making all content within every <p> tag a font-size of 16px
- */
+*/
 p {
     font-size: 16px;
 }
@@ -134,7 +134,7 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization,
+#search-engine-optimization,
 .online-reputation-management,
 .social-media-marketing
  {
@@ -146,13 +146,13 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img,
+#search-engine-optimization img,
 .online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2,
+#search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
     margin-bottom: 20px;
