Added comment for img tags in .search-engine optimization, .online-reputation-management and .social-media-marketing classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,9 @@ Each class has the same font, blue background colour, and white text.
     color: #ffffff;
 }
 
+/* 
+Set maximum height images for each class to 200px.
+*/
 .search-engine-optimization img,
 .online-reputation-management img,
 .social-media-marketing img {
