--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,10 @@ Set maximum height images for each class to 200px.
     max-height: 200px;
 }
 
+/*
+Added a 20px margin between h2 and p elements. 
+Set font size to 36px.
+*/
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
