--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,10 +139,20 @@ Set font size to 36px.
     font-size: 36px;
 }
 
-.float-left,
-.float-right {
+/*
+Floating images to the left side of the content with a 25px margin between the image and the content.
+*/
+.float-left {
     float: left;
     margin-right: 25px;
+}
+
+/*
+Floating images to the right side of the content with a 25px margin between the image and the content.
+*/
+.float-right {
+    float: right;
+    margin-left: 25px;
 }
 
 
