--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ Setting the nav inside the header to have a padding of 15px on the top of the li
 }
 
 /*
-
+Removing marker from nav list
 */
 .header nav ul {
     list-style-type: none;
